using Microsoft.AspNetCore.Mvc;
using Microsoft.AspNetCore.Authorization;
using Microsoft.AspNetCore.Identity;
using Microsoft.EntityFrameworkCore; 
using GameBooster.Core.Entities;
using GameBooster.Core.Interfaces;
using GameBooster.Web.Models;
using GameBooster.Grpc;
using GameBooster.Data;
using GameBooster.Service.Services; 
using System.Linq;

namespace GameBooster.Web.Controllers
{
    [Authorize] // YalnÄ±zca giriÅŸ yapmÄ±ÅŸ kullanÄ±cÄ±lar girebilir
    public class ProfileController : Controller
    {
        private readonly IHardwareService _hardwareService;
        private readonly UserManager<AppUser> _userManager;
        private readonly BottleneckCalculator.BottleneckCalculatorClient _bottleneckClient;
        private readonly ISoapService _soapService;
        
        // Stored Procedure Ã§alÄ±ÅŸtÄ±rmak iÃ§in Context'e ihtiyacÄ±mÄ±z var
        private readonly GameBoosterDbContext _context; 

        public ProfileController(IHardwareService hardwareService, 
                                 UserManager<AppUser> userManager, 
                                 BottleneckCalculator.BottleneckCalculatorClient bottleneckClient, 
                                 ISoapService soapService,
                                 GameBoosterDbContext context) // Context'i buraya ekledik
        {
            _hardwareService = hardwareService;
            _userManager = userManager;
            _bottleneckClient = bottleneckClient;
            _soapService = soapService;
            _context = context;
        }

        public async Task<IActionResult> Index()
        {
            // 1. GiriÅŸ yapan kullanÄ±cÄ±nÄ±n ID'sini al
            var userId = int.Parse(_userManager.GetUserId(User)!);

            // 2. VeritabanÄ±ndan kullanÄ±cÄ±nÄ±n sistemlerini ve Dropdown (SeÃ§im) listelerini Ã§ek
            var mySystems = await _hardwareService.GetUserSystemsAsync(userId);
            ViewBag.Gpus = await _hardwareService.GetGPUsAsync();
            ViewBag.Cpus = await _hardwareService.GetCPUsAsync();
            
            // RAM SeÃ§enekleri
            ViewBag.RamOptions = new List<int> { 4, 8, 12, 16, 24, 32, 48, 64, 96, 128 };

            // ============================================================
            // ğŸ›¢ï¸ STORED PROCEDURE ENTEGRASYONU (VeritabanÄ± Ä°steri)
            // ============================================================
            // AmacÄ±: KullanÄ±cÄ±nÄ±n kaÃ§ tane sistemi olduÄŸunu SP ile saydÄ±rmak.
            try
            {
                var connection = _context.Database.GetDbConnection();
                // BaÄŸlantÄ± zaten aÃ§Ä±k olabilir kontrolÃ¼ (Opsiyonel ama gÃ¼venli)
                if (connection.State != System.Data.ConnectionState.Open) 
                    await connection.OpenAsync();

                using (var command = connection.CreateCommand())
                {
                    command.CommandText = $"CALL sp_CountUserSystems({userId})";
                    var result = await command.ExecuteScalarAsync();
                    ViewBag.SpSystemCount = Convert.ToInt32(result);
                }
            }
            catch (Exception)
            {
                ViewBag.SpSystemCount = 0;
            }
            // ============================================================


            // ============================================================
            // ğŸ› ï¸ SQL FUNCTION ENTEGRASYONU (Service Ãœzerinden - Yeni Ã–zellik)
            // ============================================================
            // AmacÄ±: fn_GetGpuDescription fonksiyonunu kullanarak GPU aÃ§Ä±klamasÄ±nÄ± getirmek.
            
            Dictionary<int, string> gpuDescriptions = new Dictionary<int, string>();

            // Listelenen her sistem iÃ§in GPU aÃ§Ä±klamasÄ±nÄ± Servis'ten iste
            if (mySystems != null)
            {
                foreach (var system in mySystems)
                {
                    // AynÄ± GPU'yu tekrar sormamak iÃ§in kontrol (Cache mantÄ±ÄŸÄ±)
                    if (!gpuDescriptions.ContainsKey(system.GPUId))
                    {
                        // DÄ°KKAT: Burada Context DEÄÄ°L, Service kullanÄ±yoruz.
                        string desc = await _hardwareService.GetGpuDescriptionAsync(system.GPUId);
                        gpuDescriptions.Add(system.GPUId, desc);
                    }
                }
            }
            
            // View'de kullanmak iÃ§in gÃ¶nderiyoruz
            ViewBag.GpuDescriptions = gpuDescriptions;
            // ============================================================


            // ============================================================
            // ğŸŒ SOAP SERVÄ°S ENTEGRASYONU (20 Puan - Ä°letiÅŸim SaÄŸlama)
            // ============================================================
            try
            {
                int ramToConvert = 128; // VarsayÄ±lan deÄŸer
                if (mySystems != null && mySystems.Any())
                {
                    ramToConvert = mySystems.First().RamAmount;
                }

                string result = await _soapService.NumberToWordsAsync(ramToConvert);
                ViewBag.SoapMessage = $"Sistem belleÄŸiniz ({ramToConvert} GB), uluslararasÄ± sunucularda '{result.ToLower()}' olarak doÄŸrulandÄ±.";
            }
            catch (Exception)
            {
                ViewBag.SoapMessage = "Global sunucu baÄŸlantÄ±sÄ± sÄ±rasÄ±nda geÃ§ici bir hata oluÅŸtu (Offline Mod).";
            }
            // ============================================================

            return View(mySystems);
        }

        // YENÄ° METOT: Sadece DonanÄ±m Kaydetmek Ä°Ã§in
        [HttpPost]
        public async Task<IActionResult> AddSystem(int gpuId, int cpuId, int ramAmount, string systemName)
        {
            var userId = int.Parse(_userManager.GetUserId(User)!);

            // 1. AdÄ±m: DonanÄ±m bilgilerini Ã§ek
            var allGpus = await _hardwareService.GetGPUsAsync();
            var allCpus = await _hardwareService.GetCPUsAsync();

            var selectedGpu = allGpus.FirstOrDefault(g => g.Id == gpuId);
            var selectedCpu = allCpus.FirstOrDefault(c => c.Id == cpuId);

            string grpcMessage = "";

            // 2. AdÄ±m: gRPC ile DarboÄŸaz KontrolÃ¼ (3. Madde - 20 Puan)
            if (selectedGpu != null && selectedCpu != null)
            {
                try
                {
                    var reply = await _bottleneckClient.CalculateAsync(new BottleneckRequest
                    {
                        GpuModel = selectedGpu.Name,
                        CpuModel = selectedCpu.Name
                    });

                    if (!reply.IsCompatible)
                    {
                        grpcMessage = $"âš ï¸ UyarÄ±: {reply.Status} (DarboÄŸaz: %{reply.Percentage})";
                    }
                    else
                    {
                        grpcMessage = $"âœ… DonanÄ±m Uyumu: {reply.Status}";
                    }
                }
                catch (Exception)
                {
                    grpcMessage = "(Uyumluluk servisine eriÅŸilemedi)";
                }
            }

            // 3. AdÄ±m: Ä°sim boÅŸsa otomatik ata
            if (string.IsNullOrEmpty(systemName)) 
                systemName = $"Sistemim ({DateTime.Now.ToShortDateString()})";

            // 4. AdÄ±m: VeritabanÄ±na Kaydet
            await _hardwareService.SaveUserSystemAsync(userId, gpuId, cpuId, ramAmount, systemName);

            // 5. AdÄ±m: MesajÄ± kullanÄ±cÄ±ya gÃ¶ster
            TempData["SuccessMessage"] = $"Sistem eklendi! {grpcMessage}";
            
            return RedirectToAction("Index");
        }

        // 2. Ana Sayfadan Gelen Kaydetme Ä°steÄŸi
        [HttpPost]
        public async Task<IActionResult> SaveSystem(HomeIndexViewModel model)
        {
            if (model.SelectedGpuId == 0 || model.SelectedCpuId == 0)
            {
                return RedirectToAction("Index", "Home");
            }

            var userId = int.Parse(_userManager.GetUserId(User)!);
            string sysName = $"Sistemim ({DateTime.Now.ToShortDateString()})";

            await _hardwareService.SaveUserSystemAsync(
                userId,
                model.SelectedGpuId,
                model.SelectedCpuId,
                model.RamAmount,
                sysName
            );

            TempData["SuccessMessage"] = "Sisteminiz baÅŸarÄ±yla kaydedildi! ğŸ‰";
            return RedirectToAction("Index");
        }

        [HttpPost]
        public async Task<IActionResult> DeleteSystem(int id)
        {
            var userId = int.Parse(_userManager.GetUserId(User)!);
            
            // EÄŸer istersen burada da SP kullanarak silebilirsin:
            // await _context.Database.ExecuteSqlRawAsync("CALL sp_DeleteSystem({0})", id);
            // Ama ÅŸimdilik Service Ã¼zerinden devam ediyoruz:

            bool isDeleted = await _hardwareService.DeleteUserSystemAsync(id, userId);

            if(isDeleted) 
            {
                TempData["SuccessMessage"] = "Sistem baÅŸarÄ±yla silindi! ğŸ—‘ï¸";
            }
            else 
            {
                TempData["ErrorMessage"] = "Hata: Bu sistemi silmeye yetkiniz yok veya sistem bulunamadÄ±.";
            }

            return RedirectToAction("Index");
        }
    }
}